--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "k10-themes",
   "displayName": "K10's Themes",
   "description": "In The Heart Of Colors!!! For Developers And Designers",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "KasraK10",
   "icon": "kasra-hosseini-k10-theme-logo.jpg",
   "repository": {
@@ -32,7 +32,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "K10's Themes",
+        "label": "K10's Themes-Light",
         "uiTheme": "vs",
         "path": "./themes/K10's Themes-light.json"
       }
