--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "k10-themes",
   "displayName": "K10's Themes",
   "description": "In The Heart Of Colors!!! For Developers And Designers",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "publisher": "KasraK10",
   "icon": "kasra-hosseini-k10-theme-logo.jpg",
   "repository": {
@@ -24,7 +24,11 @@
     "soft",
     "night",
     "darker",
-    "black"
+    "black",
+    "pink",
+    "orange",
+    "yellow",
+    "blue"
   ],
   "engines": {
     "vscode": "^1.96.0"
