--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "k10-themes",
   "displayName": "K10's Themes",
   "description": "In The Heart Of Colors!!! For Developers And Designers",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "publisher": "KasraK10",
   "icon": "kasra-hosseini-k10-theme-logo.jpg",
   "repository": {
@@ -28,7 +28,10 @@
     "pink",
     "orange",
     "yellow",
-    "blue"
+    "blue",
+    "note",
+    "clean",
+    "text"
   ],
   "engines": {
     "vscode": "^1.96.0"
@@ -52,6 +55,11 @@
         "label": "K10's Themes-Heavy Night",
         "uiTheme": "vs-dark",
         "path": "./themes/K10's Themes-heavy-night.json"
+      },
+      {
+        "label": "K10's Themes-Clean Text Light",
+        "uiTheme": "vs-dark",
+        "path": "./themes/K10's Themes-clean-text.json"
       }
     ]
   }
