--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "k10-themes",
   "displayName": "K10's Themes",
   "description": "In The Heart Of Colors!!! For Developers And Designers",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "publisher": "KasraK10",
   "icon": "kasra-hosseini-k10-theme-logo.jpg",
   "repository": {
@@ -59,7 +59,12 @@
       {
         "label": "K10's Themes-Clean Text Light",
         "uiTheme": "vs-dark",
-        "path": "./themes/K10's Themes-clean-text.json"
+        "path": "./themes/K10's Themes-clean-text-light.json"
+      },
+      {
+        "label": "K10's Themes-Clean Text Dark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/K10's Themes-clean-text-dark.json"
       }
     ]
   }
