--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "k10-themes",
   "displayName": "K10's Themes",
   "description": "In The Heart Of Colors!!! For Developers And Designers",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "publisher": "KasraK10",
   "icon": "kasra-hosseini-k10-theme-logo.jpg",
   "repository": {
@@ -31,7 +31,12 @@
     "blue",
     "note",
     "clean",
-    "text"
+    "text",
+    "grey",
+    "grey man",
+    "grey hat",
+    "grey hat hacker",
+    "gray"
   ],
   "engines": {
     "vscode": "^1.96.0"
@@ -58,13 +63,18 @@
       },
       {
         "label": "K10's Themes-Clean Text Light",
-        "uiTheme": "vs-dark",
+        "uiTheme": "vs",
         "path": "./themes/K10's Themes-clean-text-light.json"
       },
       {
         "label": "K10's Themes-Clean Text Dark",
         "uiTheme": "vs-dark",
         "path": "./themes/K10's Themes-clean-text-dark.json"
+      },
+      {
+        "label": "K10's Themes-GreyMan",
+        "uiTheme": "vs-dark",
+        "path": "./themes/K10's Themes-grey-man.json"
       }
     ]
   }
